--- a/UI_Course9 (UIContainerView)/Base.lproj/Main.storyboard
+++ b/UI_Course9 (UIContainerView)/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="ipad9_7" orientation="landscape">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,84 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="UI_Course9__UIContainerView_" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qWo-c4-ZSu">
+                                <rect key="frame" x="20" y="20" width="297" height="728"/>
+                                <connections>
+                                    <segue destination="taj-pA-vtI" kind="embed" id="92y-MC-9NH"/>
+                                </connections>
+                            </containerView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rTF-nm-2jk">
+                                <rect key="frame" x="325" y="20" width="679" height="501"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="679" id="Bg5-CK-ubl"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BuT-XI-Iyc">
+                                <rect key="frame" x="325" y="563" width="679" height="110"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="110" id="YZO-dH-QHs"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="rTF-nm-2jk" firstAttribute="leading" secondItem="qWo-c4-ZSu" secondAttribute="trailing" constant="8" id="436-M0-IfA"/>
+                            <constraint firstItem="rTF-nm-2jk" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="6JE-H4-zIG"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="qWo-c4-ZSu" secondAttribute="bottom" constant="20" id="Mhf-qg-ciN"/>
+                            <constraint firstItem="qWo-c4-ZSu" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="RZw-uw-Hr4"/>
+                            <constraint firstItem="BuT-XI-Iyc" firstAttribute="leading" secondItem="qWo-c4-ZSu" secondAttribute="trailing" constant="8" id="TWZ-Hw-i19"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="BuT-XI-Iyc" secondAttribute="trailing" constant="20" id="fgi-mc-Q5J"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="BuT-XI-Iyc" secondAttribute="bottom" constant="95" id="jqs-zZ-7bM"/>
+                            <constraint firstItem="qWo-c4-ZSu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="n9e-lK-fvB"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="rTF-nm-2jk" secondAttribute="trailing" constant="20" id="ozw-pb-2Hd"/>
+                            <constraint firstItem="BuT-XI-Iyc" firstAttribute="top" secondItem="rTF-nm-2jk" secondAttribute="bottom" constant="42" id="z6n-uO-ztx"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="imageCover" destination="rTF-nm-2jk" id="HL8-0R-iyZ"/>
+                        <outlet property="titleLabel" destination="BuT-XI-Iyc" id="aPk-2k-Dsw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="19.921875" y="23.4375"/>
+        </scene>
+        <!--DetailVC-->
+        <scene sceneID="ibX-aL-4ZU">
+            <objects>
+                <tableViewController id="taj-pA-vtI" customClass="DetailVC" customModule="UI_Course9__UIContainerView_" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="qda-EN-8iC">
+                        <rect key="frame" x="0.0" y="0.0" width="297" height="728"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Title" id="kEb-hc-Wis">
+                                <rect key="frame" x="0.0" y="28" width="297" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="kEb-hc-Wis" id="nUb-US-358">
+                                    <rect key="frame" x="0.0" y="0.0" width="297" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="taj-pA-vtI" id="vG7-KH-pD6"/>
+                            <outlet property="delegate" destination="taj-pA-vtI" id="It0-Tp-hTd"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Ql-t3-U9v" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-370" y="23"/>
         </scene>
     </scenes>
 </document>
